# nanobot-desktop

./: .gitignore  HANDOFF.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: publish-desktop.yml
desktop/: README.md  TESTING.md  build_backend.py  build_runtime.py  package-lock.json  package.json  run_backend.py  run_backend_dev.bat  run_runtime.py  run_tauri_dev_hidden.ps1  test_release.ps1
desktop/backend/nanobot_desktop_backend/: __init__.py  __main__.py  app.py  chat_manager.py  config_manager.py  gateway_manager.py  paths.py  schemas.py  weixin_manager.py
desktop/scripts/: prepare_release_config.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main-window.json
desktop/src-tauri/src/: main.rs
desktop/ui/: app.js  index.html  styles.css
nanobot/channels/: feishu.py  weixin.py
nanobot/cli/: commands.py
nanobot/config/: loader.py  schema.py
nanobot/providers/: anthropic_provider.py  azure_openai_provider.py  base.py  custom_provider.py  factory.py  litellm_provider.py  openai_compat_provider.py
nanobot/session/: manager.py
nanobot/utils/: prompt_templates.py
tests/agent/: test_consolidation_ratio.py
tests/channels/: test_feishu_reply.py
tests/cli/: test_commands.py
