[package]
name = "nanobot-desktop"
version = "0.4.3"
edition = "2021"
description = "Desktop shell for Nanobot"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
url = "2"
